--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:mysql://localhost/home_budget_manager_db?serverTimezone=Europe/Warsaw
+spring.datasource.url=jdbc:mysql://localhost/piggybank_db?serverTimezone=Europe/Warsaw
 spring.datasource.username=root
 spring.datasource.password=czarymary1234
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 ##### App Properties
 user.default.roles=USER
